--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,11 +4,11 @@ services:
   wordpress:
     image: wordpress:latest
     ports:
-      - "8081:80"
+      - "80:80"
     environment:
       WORDPRESS_DB_HOST: <host-database>
       WORDPRESS_DB_USER: <user-configurado-no-rds>
       WORDPRESS_DB_PASSWORD: <senha-configurada-no-rds>
       WORDPRESS_DB_NAME: <nome-db-configurada-no-rds>
     volumes:
-      - /efs/wp-content:/var/www/html
+      - /efs/wordpress:/var/www/html
